--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "scripts": {
     "start": "node chatRoomServer.js"
   },
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.18.2",
+    "socket.io": "^4.7.2"
+  }
 }
